Fixed: content in all tables is vertically centered align.

--- a/src/main/resources/static/asset/css/bootstrap.css
+++ b/src/main/resources/static/asset/css/bootstrap.css
@@ -2829,7 +2829,7 @@ th {
 .table>thead>tr>th {
     padding: 8px;
     line-height: 1.42857143;
-    vertical-align: top;
+    vertical-align: middle;
     border-top: 1px solid #ddd
 }
 
